--- a/odin-facebook/app/views/layouts/application.html.erb
+++ b/odin-facebook/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FacebookApp</title>
+    <title>OdinFacebook</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
