UI changes, post and user fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>OdinFacebook</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
+<%= render "layouts/head" %>
   <body>
+    <%= render "layouts/header" %>
     <%= yield %>
   </body>
 </html>
