--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,7 +13,8 @@
 <p class="post-time-ago my-2"><%= time_ago_in_words(post.created_at) %> ago.</p>
 <p class="post-content"><%= post.content %></p>
 <div class="d-flex justify-content-between post-like-line">
-	<button class="trans-btn"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>  Like</button>
+	<%= button_to "<%= post.likes.count %> Like",{:controller => 'likes', :action => 'create', :user_id => current_user.id, :post_id => @post.id}, {:method => :post} %>
+	<button class="trans-btn"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>0 Like</button>
 	<ul class="d-flex">
 		<li class="comments-count">0 Comments</li>
 		<li><button class="trans-btn">Reply</button></li>
