--- a/app/views/posts/_postform.html.erb
+++ b/app/views/posts/_postform.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for [Post.new] do |f| %>
   <div class="form-group">
     <%= f.label :content, class:'d-none'%>
     <%= f.text_area :content, class: 'form-control', :rows => 3, :placeholder => "What's on your mind today?"  %>
