--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -128,6 +128,12 @@ textarea:focus, input:focus{
 /*Third Col*/
 
 
+/*Comment Box*/
+
+.comment-box{
+    padding: 1rem .8rem;
+    border:1px solid #f5d0d7
+}
 
 
 /* Navbar Area*/
