Modify necessary files

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,11 @@
           </div>
 
           <div class="form-group">
+            <%= f.label :username %><br />
+            <%= f.text_field :username, autocomplete: "username", class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
             <%= f.label :location %><br />
             <%= f.text_field :location, autocomplete: "name", class: 'form-control' %>
           </div>
