--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,11 @@
             </div>
 
             <div class="form-group">
+            <%= f.label :username %><br />
+            <%= f.text_field :username, autocomplete: "username", class: 'form-control' %>
+            </div>
+
+            <div class="form-group">
               <%= f.label :email %><br />
               <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
             </div>
