git unrelated histories fix

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -139,19 +139,19 @@ textarea:focus, input:focus{
 /* Navbar Area*/
 
 .bg-red{
-	background-color:#EE4565;
+	background-color:#EE4565 !important;
 }
 
 .font-red{
-	color:#EE4565;;
+	color:#EE4565 !important;
 }
 
 .font-white{
-	color:#fff;
+	color:#fff !important;
 }
 
 .font-black{
-	color:#232323;
+	color:#232323 !important;
 }
 
 .font-black:hover{
