--- a/app/views/posts/_friends.html.erb
+++ b/app/views/posts/_friends.html.erb
@@ -1,20 +1,15 @@
 <div class="col friends-col py-4">
 	<p class="lead font-red">Friends</p>
-	<p class="d-flex user-name-and-image">
-		<span class="post-author-img">
-		<img src="https://avatars1.githubusercontent.com/u/25789605?s=460&v=4" alt="small profile image" class="img-fluid small-profile-img">
-	</span> 
-	<span class="post-author-name ml-2">Asha Asha</span></p>
-
-	<p class="d-flex user-name-and-image">
-		<span class="post-author-img">
-		<img src="https://avatars1.githubusercontent.com/u/25789605?s=460&v=4" alt="small profile image" class="img-fluid small-profile-img">
-	</span> 
-	<span class="post-author-name ml-2">Asha Asha</span></p>
-
-	<p class="d-flex user-name-and-image">
-		<span class="post-author-img">
-		<img src="https://avatars1.githubusercontent.com/u/25789605?s=460&v=4" alt="small profile image" class="img-fluid small-profile-img">
-	</span> 
-	<span class="post-author-name ml-2">Asha Asha</span></p>
+	<% current_user.friendships.where(confirmed:"approved").each do |friendship| %>
+	  <% friendship.users.each do  |user| %>
+	   <% unless user == current_user %>
+	   <p class="d-flex user-name-and-image">
+				<span class="post-author-img">
+				<%= image_tag user_avatar(user) , class: "img-fluid small-profile-img", alt: "small friend profile image" %>
+			</span> 
+			<span class="post-author-name ml-2"><%= link_to user.name, user, :class => "font-black" %></span></p>
+	   <% end %>
+	  <% end %>
+	<% end %>
+	
 </div>
