--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,2 +1,19 @@
+<% unless current_user == user %>
 <p><%= user.name %></p>
 <p> <%= image_tag user_avatar(user) , class: "img-fluid med-profile-img" %> </p>
+
+
+
+<% if current_user_friendship_status(user.id,current_user.id, 0) %>
+<%= link_to "Pending Request", user, :class => "bg-red font-white p-1 pendingbutton" %>
+<% elsif current_user_friendship_status(current_user.id,user.id, 0)%>
+ <% @bfriendship = current_user_friendship_find(current_user.id,user.id, 0) %>
+ <%= button_to "Accept Friend",{:controller => 'friendships', :action => 'update',:user_id => current_user.id, :friend_id => user.id, :id => @bfriendship.id }, {:method => :patch, :class => "bg-red font-white p-1 acceptingfriend"} %>
+<% elsif current_user_friendship_status(current_user.id, user.id, 1) || current_user_friendship_status(user.id, current_user.id, 1) %>
+  <%= link_to "See Profile", user, :class => "bg-red font-white p-1 profile" %>
+<% else %>
+<%= button_to "Add Friend",{:controller => 'friendships', :action => 'create',:user_id => current_user.id, :friend_id => user.id}, {:method => :post, :class => "bg-red font-white p-1 addingfriend"} %>
+<% end %>
+</p>
+
+<% end %>
