--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,11 @@
 					      <input class="form-control w-80 search-input" type="search" placeholder="Find a Friend" aria-label="Search">
 					      <button class="btn my-2 my-sm-0 search-btn" type="submit"><i class="fa fa-search font-red" aria-hidden="true"></i></button>
 					    </form>
+					    <% unless @accept_friends.empty? %>
+		    		 	<li class="nav-item d-flex align-items-center active">
+				        <%= link_to "Notifications", users_path, :class => "nav-link" %>
+				        </li>
+				        <% end %>
 					    <% end %>
 		    		 </div>
 
