Made the reqiured corrections

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
   <%= render @posts %>
   </div>
 
-  <%= render "friends" %>
+  <%= render "friends", confirmed_friends:   @confirmed_friends%>
 
 </div>
 
