--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,74 +1,74 @@
-  	<nav class="navbar navbar-expand-lg navbar-dark bg-red">
-  		<div class="container-fluid">
-		  <a class="navbar-brand" href="#"><i class="fa fa-pagelines" aria-hidden="true"></i></a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav w-100">
-		    	<div class="container-fluid">
-		    	  <div class="row">
-
-		    		 <div class="col d-flex">
-		    		 	<li class="nav-item d-flex align-items-center active">
-				        <%= link_to "Newsfeed", posts_path, :class => "nav-link" %>
-				      </li>
-
-		    		 </div>
-
-		    		 <div class="col d-flex">
-		    		 	<% if current_user %>
-		    		 	<form class="form-inline my-2 my-lg-0 w-100">
-					      <input class="form-control w-80 search-input" type="search" placeholder="Find a Friend" aria-label="Search">
-					      <button class="btn my-2 my-sm-0 search-btn" type="submit"><i class="fa fa-search font-red" aria-hidden="true"></i></button>
-					    </form>
-					    <% unless @accept_friends.empty? %>
-		    		 	<li class="nav-item d-flex align-items-center active">
-				        <%= link_to "Notifications", users_path, :class => "nav-link" %>
-				        </li>
-				        <% end %>
-					    <% end %>
-		    		 </div>
-
-		    		 <div class="col d-flex justify-content-end">
-
-				      <% if current_user %>
-				      <li class="nav-item d-flex align-items-center pr-2">
-				        <%= link_to "Edit Profile", edit_user_registration_path, :class => 'nav-link' %>
-				      </li>
-
-				      <li class="nav-item d-flex align-items-center pr-2">
-				        <%= link_to "Users", users_path, :class => 'nav-link' %>
-				      </li>
-
-				      <li class="nav-item d-flex align-items-center pr-2">
-				      	<%= link_to current_user, :class => "navbar-link font-black" do %>
-								   <%= image_tag user_avatar(current_user) , class: "img-fluid small-profile-img", alt: "small profile image" %> <span class="nav-link d-inline pt-2 no-decoration">Your Profile</span>
-								<% end %>
-				      </li>
-
-				      <li class="nav-item d-flex align-items-center pr-2">
-				        <%= link_to "Logout", destroy_user_session_path, {:class => 'nav-link Logout', method: :delete } %>
-				      </li>
-
-				      <% else %>
-
-				      <li class="nav-item d-flex align-items-center pr-2">
-				        <%= link_to "Login", new_user_session_path, {:class => 'nav-link'}%>
-				      </li>
-
-				      <li class="nav-item d-flex align-items-center pr-2">
-				        <%= link_to "Register", new_user_registration_path, :class => 'nav-link'%>
-				      </li>
-
-				      <% end %>
-
-		    		 </div>
-
-		    	  </div>
-		    	 </div>
-		    </ul>
-		  </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-red">
+<div class="container-fluid">
+<a class="navbar-brand" href="#"><i class="fa fa-pagelines" aria-hidden="true"></i></a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+​
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav w-100">
+	  <div class="container-fluid">
+		<div class="row">
+​
+		   <div class="col d-flex">
+			   <li class="nav-item d-flex align-items-center active">
+			  <%= link_to "Newsfeed", posts_path, :class => "nav-link" %>
+			</li>
+​
+		   </div>
+​
+		   <div class="col d-flex">
+			   <% if current_user %>
+			   <form class="form-inline my-2 my-lg-0 w-100">
+				<input class="form-control w-80 search-input" type="search" placeholder="Find a Friend" aria-label="Search">
+				<button class="btn my-2 my-sm-0 search-btn" type="submit"><i class="fa fa-search font-red" aria-hidden="true"></i></button>
+			  </form>
+			  <%# unless @accept_friends.empty? %>
+				<li class="nav-item d-flex align-items-center active">
+				 <%= link_to "Notifications", users_path, :class => "nav-link" %>
+			  </li>
+			  <%# end %>
+			  <% end %>
+		   </div>
+​
+		   <div class="col d-flex justify-content-end">
+​
+			<% if current_user %>
+			<li class="nav-item d-flex align-items-center pr-2">
+			  <%= link_to "Edit Profile", edit_user_registration_path, :class => 'nav-link' %>
+			</li>
+​
+			<li class="nav-item d-flex align-items-center pr-2">
+			  <%= link_to "Users", users_path, :class => 'nav-link' %>
+			</li>
+​
+			<li class="nav-item d-flex align-items-center pr-2">
+				<%= link_to current_user, :class => "navbar-link font-black" do %>
+						 <%= image_tag user_avatar(current_user) , class: "img-fluid small-profile-img", alt: "small profile image" %> <span class="nav-link d-inline pt-2 no-decoration">Your Profile</span>
+					  <% end %>
+			</li>
+​
+			<li class="nav-item d-flex align-items-center pr-2">
+			  <%= link_to "Logout", destroy_user_session_path, {:class => 'nav-link Logout', method: :delete } %>
+			</li>
+​
+			<% else %>
+​
+			<li class="nav-item d-flex align-items-center pr-2">
+			  <%= link_to "Login", new_user_session_path, {:class => 'nav-link'}%>
+			</li>
+​
+			<li class="nav-item d-flex align-items-center pr-2">
+			  <%= link_to "Register", new_user_registration_path, :class => 'nav-link'%>
+			</li>
+​
+			<% end %>
+​
+		   </div>
+​
 		</div>
-		</nav>
+	   </div>
+  </ul>
+</div>
+</div>
+</nav>
