--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -4,7 +4,7 @@
         <p class="user-name"><%= @user.name %></p>
         <p class="user-location"><i class="fa fa-map-marker" aria-hidden="true"></i> <%= @user.location %></p>
 
-        <p class="count-bloc d-flex justify-content-between"><span class="posts-count"><%= pluralize(@user.posts.count, "post") %></span> <span class="friends-count"><%= pluralize(@user.friendships.count, "friend") %></span></p>
+        <p class="count-bloc d-flex justify-content-between"><span class="posts-count"><%= pluralize(@user.posts.count, "friend")  %></span> <span class="friends-count"><%= pluralize(@user.friendships.count, "friend")  %></span></p>
 
         <p class="user-description text-left pt-3"><%= @user.description %></p>
         
@@ -17,7 +17,7 @@
 
         <p class="px-4"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Studied at <span class="user-school">UNN</span></p>
 
-        <p class="px-4"><i class="fa fa-users" aria-hidden="true"></i> Followed by <span class="user-friends-count"><%= pluralize(@user.friendships.count, "person") %></span> </p>
+        <p class="px-4"><i class="fa fa-users" aria-hidden="true"></i> Followed by <span class="user-friends-count">0</span> people</p>
     </div>
 
     </div>
