--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,7 +51,7 @@
 				      </li>
 
 				      <li class="nav-item d-flex align-items-center pr-2">
-				        <%= link_to "Logout", destroy_user_session_path, {:class => 'nav-link', method: :delete } %>
+				        <%= link_to "Logout", destroy_user_session_path, {:class => 'nav-link logout', method: :delete } %>
 				      </li>
 
 				      <% else %>
