--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -12,7 +12,7 @@
       <% @bfriendship = user.friendships.find { |friendship| friendship.friend_id == current_user.id} %>
        <%= button_to "Accept Friend",{:controller => 'friendships', :action => 'update',:user_id => current_user.id, :friend_id => user.id, :id => @bfriendship.id }, {:method => :patch, :class => "bg-red font-white p-1 acceptingfriend"} %>
 
-       <%= button_to "Reject Friend",{:controller => 'friendships', :action => 'destroy',:user_id => current_user.id, :friend_id => user.id, :id => @bfriendship.id }, {:method => :delete, :class => "bg-red font-white p-1 acceptingfriend"} %>
+       <%= button_to "Reject Friend",{:controller => 'friendships', :action => 'destroy',:user_id => current_user.id, :friend_id => user.id, :id => @bfriendship.id }, {:method => :delete, :class => "bg-red font-white p-1 rejectingfriend"} %>
 
     <% elsif current_user.friends.include?(user) %>
        <%= link_to "See Profile", user, :class => "bg-red font-white p-1 profile" %>
